Tests/CompilerTests/negative/synthetic-conformance.hylo
// An indestructivble struct.
struct Indestructible {}

// A generic struct.
struct Box<T> { var x: T }

// Conformance is structurally synthesizable.
struct A is Deinitializable {}

// Conformance is structurally synthesizable.
struct B is Deinitializable {
  var x: {x: Void}  // structural conformance
  var y: A          // user-defined conformance
}

// Conformance is synthesizable using the where clause.
given <X where X is Deinitializable> Box<X> is Deinitializable {}

// Conformance is not synthesizable.
given <X> Box<X> is Deinitializable {}

// A struct whose contents isn't structurally deinitializable.
struct NotStructurallyDeinitializable is Deinitializable {
  var x: Indestructible
}
